--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 				Email     : <input type="email" name="" class="namess"><br><br>
 				Password : <input type="password" name="" class="name"><br><br><br>
 				<button>Sing Up</button>
+				<a href="https://zawtone.github.io/profile/signup.html">hi</a>
 
 			</form>
 
