--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
 				Email     : <input type="email" name="" class="namess"><br><br>
 				Password : <input type="password" name="" class="name"><br><br><br>
 				<button>Sing Up</button>
-				<a href="https://zawtone.github.io/profile/signup.html">hi</a>
+				
+				<a href="https://zawtone.github.io/profile/profile.html" style="color: red;
+	text-align: center;
+	display: block;
+">profile</a>
 
 			</form>
 
