--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
 	.img-profile1{
 		width: 127px;
 		height: 150px;
-		background-image: url("pics/1.jpg");
+		background-image: url("logopnyk.jpg");
 		background-size: cover;
 		background-position: center center;
 		border-radius: 80px;
