--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 	text-align: center;
 	display: block;
 ">profile</a>
+				<a href="https://zawtone.github.io/profile/pnyk.html" style="color: red;
+	text-align: center;
+	display: block;
+">profile</a>
 
 			</form>
 
