--- a/pnyk.html
+++ b/pnyk.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>forcomputer</title>
+	<link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
   <meta   charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   	
