--- a/pnyk.html
+++ b/pnyk.html
@@ -23,7 +23,7 @@
 <script type="text/javascript" src="easing.js"></script>
 <!---- start-smoth-scrolling---->
 </head>
-<body style="font-family: Zawgyi-One !important;">
+<body style="font-family: Padauk, Maynamr3, "Myanmar Text";">
 	<!-- for the whole -->
 <div class="thewhole">
 	
