--- a/pnyk.html
+++ b/pnyk.html
@@ -23,7 +23,7 @@
 <script type="text/javascript" src="easing.js"></script>
 <!---- start-smoth-scrolling---->
 </head>
-<body style="font-family: Maynamr3 !important; ">
+<body style="font-family: zawgyi-one !important; ">
 	<!-- for the whole -->
 <div class="thewhole">
 	
