--- a/pnyk.html
+++ b/pnyk.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<title>forcomputer</title>
+	<meta   charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href='https://mmwebfonts.comquas.com/fonts/?font=zawgyi' />
 	<link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-  <meta   charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   	
 	<link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="subject.css">
@@ -40,7 +42,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#" style="color: white !important;
+      <a id="zawgyifont" class="navbar-brand" href="#" style="color: white !important;
 	text-shadow: 1px 2px 5px block;
 	font-weight: bold;
 	text-shadow: 2px 2px 5px black;
