--- a/pnyk.html
+++ b/pnyk.html
@@ -23,6 +23,9 @@
 <!---- start-smoth-scrolling---->
 <script type="text/javascript" src="move-top.js"></script>
 <script type="text/javascript" src="easing.js"></script>
+	<style type="text/css">
+		#zawgyifont{font-family:Zawgyi-One;}
+	</style>
 <!---- start-smoth-scrolling---->
 </head>
 <body style="font-family: zawgyi-one !important; ">
